# todos-simple-backend

./: Cargo.toml  README.md  bob.rs
migrations/2022-02-06-151332_create_todos/: up.sql
migrations/2022-02-07-225637_create-some-test-todos/: down.sql  up.sql
src/: controllers.rs  main.rs  models.rs  schema.rs
