[package]
name = "todos-simple-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4.0"
libsqlite3-sys = { version = "0.22.2", features = ["bundled"] }
anyhow = "1.0"
actix-web = "3"
r2d2_sqlite = "0.18.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde="1"
actix-cors = "0.5.4"
